Add support for --sun-misc-unsafe-memory-access=